# mmforge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  OPEN_SOURCE.md  README.md  README_zh.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml
crates/mmforge-bridge/: Cargo.toml
crates/mmforge-bridge/src/: dxf_detector.rs  format_route.rs  gltf_parser.rs  iges_detector.rs  job.rs  lib.rs  lsm_detector.rs  stl_parser.rs
crates/mmforge-cli/: Cargo.toml  README.md
crates/mmforge-cli/src/: gen_large_model.rs  main.rs
crates/mmforge-cli/tests/: integration.rs
crates/mmforge-core/: Cargo.toml  README.md
crates/mmforge-core/src/: cancel.rs  drawing.rs  error.rs  ids.rs  lib.rs  math.rs  model.rs  parser.rs  progress.rs  version.rs
crates/mmforge-core/src/lsm/: binary.rs  compress.rs  constants.rs  lsmc.rs  mod.rs  reader.rs  tests.rs  writer.rs
crates/mmforge-format-dxf/: Cargo.toml
crates/mmforge-format-dxf/benches/: dxf_bench.rs
crates/mmforge-format-dxf/src/: blocks_parser.rs  detect.rs  entity_parser.rs  lib.rs  parser.rs  section_parser.rs  tables_parser.rs  tokenizer.rs
crates/mmforge-format-dxf/testdata/: error.dxf  linetypes.dxf  test.dxf
crates/mmforge-format-iges/: Cargo.toml
crates/mmforge-format-iges/src/: detect.rs  lib.rs  parser.rs
crates/mmforge-format-step/: Cargo.toml  README.md  build.rs
crates/mmforge-format-step/src/: detect.rs  lib.rs  parser.rs
crates/mmforge-geometry/: Cargo.toml  README.md  build.rs
crates/mmforge-geometry/shim/: CMakeLists.txt  README.md  mmforge_occt_shim.cpp  mmforge_occt_shim.h
crates/mmforge-geometry/src/: brep.rs  lib.rs  tessellation.rs
crates/mmforge-geometry/src/occt/: adapter.rs  iges_reader.rs  mod.rs  shape.rs  step_reader.rs  sys.rs
crates/mmforge-geometry/testdata/: PQ-04909-A.STEP  assembly.stp  box.igs  deep_assembly.stp  point.igs  translated_box.igs
crates/mmforge-render/: Cargo.toml  README.md
crates/mmforge-render/src/: builder.rs  camera.rs  draw2d.rs  frustum.rs  lib.rs  lod.rs  memory.rs  packet.rs  spatial2d.rs  streaming.rs
docs/: architecture.md  development-plan.md  requirements.md
docs/adr/: README.md
docs/cli/: design.md
docs/client/: README.md  gestures.md  macos.md  rust-ffi.md  ui-design.md
docs/geometry/: README.md  brep.md  curves-surfaces.md  occt-binding.md  spatial-indexing.md
docs/lsm/: format-spec.md
docs/parser/: README.md  architecture.md  dwg.md  dxf.md  error-handling.md  gltf.md  iges.md  performance.md  step.md  stl.md  tessellation.md
docs/progress/: 2026-06-29-lsm-runtime-model-round-2.md  2026-06-29-lsm-runtime-model-round-3.md  2026-06-29-lsm-runtime-model.md  2026-06-29-occt-ffi-skeleton-round-2.md  2026-06-29-occt-ffi-skeleton-round-3.md  2026-06-29-occt-ffi-skeleton-round-4.md  2026-06-29-occt-ffi-skeleton-round-5.md  2026-06-29-occt-ffi-skeleton-round-6.md  2026-06-29-occt-ffi-skeleton-round-7.md  2026-06-29-occt-ffi-skeleton.md  2026-06-29-phase-0-cleanup.md  2026-06-29-phase-0-summary.md  2026-06-29-repository-foundation.md  2026-06-29-step-parser-occt-shell.md  2026-06-30-macos-camera-shortcuts-fix.md  2026-06-30-macos-camera-view-controls.md  2026-06-30-macos-clipping-picking-fix.md  2026-06-30-macos-clipping-picking-interval-fix.md  2026-06-30-macos-metal-viewer.md  2026-06-30-macos-render-modes-clipping-fixes.md  2026-06-30-macos-render-modes-clipping.md  2026-06-30-macos-selection-highlight-visibility.md  2026-06-30-macos-selection-mapping-fix-2.md  2026-06-30-macos-selection-mapping-fix-3.md  2026-06-30-macos-selection-mapping-fix.md  2026-06-30-macos-sidebar-hide-selection-fix.md  2026-06-30-macos-sidebar-inspector-enhancements.md  2026-06-30-macos-sidebar-inspector-fixes.md  2026-06-30-macos-structure-sidebar-inspector.md  2026-06-30-occt-cpp-shim.md  2026-06-30-step-reader-e2e.md  2026-06-30-step-to-model.md  2026-06-30-tessellation-renderpacket.md  2026-07-01-macos-bvh-correctness-fix.md  2026-07-01-macos-bvh-input-validation-fix.md  2026-07-01-macos-bvh-input-validation.md  2026-07-01-macos-bvh-triangle-picking.md  2026-07-01-macos-color-override-section-fill-fix.md  2026-07-01-macos-color-override-section-fill.md  2026-07-01-macos-empty-document-cleanup.md  (+89 more)
docs/renderer/: 2d-native.md  3d-native.md  README.md  camera.md  optimization.md
docs/scripts/: format-geometry-gate.sh  perf-baseline.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_dxf_parser.rs  fuzz_dxf_tokenizer.rs
macos/MMForge.xcodeproj/: project.pbxproj
macos/MMForge/App/: AppDelegate.swift  MMForgeApp.swift  RecentDocumentStore.swift
macos/MMForge/DesignSystem/: Colors.swift
macos/MMForge/Document/: Annotation.swift  MMForgeDocument.swift
macos/MMForge/Metal/: MetalRenderer.swift  MetalViewPlaceholder.swift  OffscreenCoordinator.swift  OffscreenRenderProtocol.swift  Picking.swift  SectionFill.swift  Shaders.metal
macos/MMForge/Resources/: Info.plist
macos/MMForge/RustBridge/: MMForge-Bridging-Header.h  RustBridge.swift  mmforge_bridge.h
macos/MMForge/Views/: ContentView.swift  DrawingView.swift  InspectorPanel.swift  StructureSidebar.swift  ViewportContainer.swift
macos/MMForgeTests/: AnnotationTests.swift  AsyncParseTests.swift  BVHPickingTests.swift  BridgeAcceptanceTests.swift  OffscreenRenderTests.swift  PickingTests.swift  ProductizationTests.swift  RecentDocumentStoreTests.swift  TransformTests.swift
macos/scripts/: build-occt-shim.sh  fresh-debug-build.sh  package.sh  preflight-check.sh  smoke-test.sh  test-git-archive-occt-gate.sh  test-preflight-geometry-gating.sh  test-xcode-shell-build.sh
scripts/: gui-acceptance-test.sh
testdata/gltf/: box.glb  box.gltf
testdata/lsm/: model_golden_v1.lsm
testdata/stl/: box.stl
