[package]
name = "mmforge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for MMForge"

[[bin]]
name = "mmforge"
path = "src/main.rs"

[dependencies]
mmforge-core = { workspace = true }
clap = { workspace = true }
