[package]
name = "mmforge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for MMForge"

[[bin]]
name = "mmforge"
path = "src/main.rs"

[dependencies]
mmforge-core = { workspace = true }
mmforge-bridge = { workspace = true }
mmforge-format-step = { workspace = true }
mmforge-format-iges = { workspace = true }
mmforge-format-dxf = { workspace = true }
mmforge-geometry = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
