[package]
name = "mmforge-format-dxf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DXF file parser for MMForge"

[dependencies]
mmforge-core = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mmforge-render = { workspace = true }
