[package]
name = "mmforge-format-iges"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "IGES/IGS file parser for MMForge"

[features]
default = []
occt = ["mmforge-geometry/occt"]

[dependencies]
mmforge-core = { workspace = true }
mmforge-geometry = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
mmforge-render = { workspace = true }
